--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <hr>
 
         <section id="main_content">
-          <p><a href="https://raw.githubusercontent.com/tazaar/streampads/master/index.html">Click here for gamepad display</a></p>
+          <p><a href="https://rawgit.com/tazaar/streampads/gh-pages/index.html">Click here for gamepad display</a></p>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
