--- a/index.html
+++ b/index.html
@@ -59,34 +59,41 @@
 // Global variables starts here
 // DO NOT TOUCH
 var gamepads = lib_gp_helper.getAllGamepads(); // Get all gamepads if we need to debug something or do polling
+var axis_prevVal = [];
 // DO NOT TOUCH, UNLESS YOU DO WANT TO
 var STICK_OFFSET = 25;
 var ANALOGUE_BUTTON_THRESHOLD = .5;
 // DO TOUCH
-var deadzone_threshold = 0.01;
-var gamepad_type = "generic";
-var gamepad_style = "css/generic"
+var gamepad_min_delta = 0.01; // Minimum move distance to trigger visual update
+var gamepad_type = "";
+var gamepad_style = "";
 var gamepad_index =  0;
 
 // Helpers
 var rAF = window.mozRequestAnimationFrame ||
   window.webkitRequestAnimationFrame ||
   window.requestAnimationFrame;
-  
+
+//noinspection JSUnresolvedVariable
 var rAFStop = window.mozCancelRequestAnimationFrame ||
   window.webkitCancelRequestAnimationFrame ||
   window.cancelRequestAnimationFrame;
 
 // Events starts here
 window.addEventListener("gamepadconnected", function() {
-  var gp = gamepads[gamepad_index];
-  console.log("Gamepad connected at index " + gp.index + ": " + gp.id + ". It has " + gp.buttons.length + " buttons and " + gp.axes.length + " axes.");
-  gameLoop();
+	if(gamepads[gamepad_index]) {
+		var gp = gamepads[gamepad_index];
+		//noinspection JSUnresolvedVariable
+        console.log("Gamepad connected at index " + gp.index + ": " + gp.id + ". It has " + gp.buttons.length + " buttons and " + gp.axes.length + " axes.");
+		gameLoop();
+	}
 });
 
 window.addEventListener("gamepaddisconnected", function() {
-  console.log("Waiting for gamepad.");
-  rAFStop(start);
+	if(gamepads[gamepad_index]) {
+		console.log("Waiting for gamepad.");
+		rAFStop();
+	}
 });
 
 // Functions starts here
@@ -94,20 +101,19 @@ window.addEventListener("gamepaddisconnected", function() {
 * Handle GET's. Also sets a defaults CSS
 */
 function SetParams() {
-	if (lib_gp_helper.Requests("ID")) { // Refers to gamepad's API gamepad.index
+	if(lib_gp_helper.Requests("ID")) // Refers to gamepad's API gamepad.index
 		gamepad_index = lib_gp_helper.Requests("ID");
-	}
-	if (lib_gp_helper.Requests("deadzone")) {
-		deadzone_threshold = lib_gp_helper.Requests("deadzone");
-	}
-	if (lib_gp_helper.Requests("type")) {
-		gamepad_type = (lib_gp_helper.Requests("type"));
-	}
-	if (lib_gp_helper.Requests("style")) {
-		lib_gp_helper.setCSS(lib_gp_helper.Requests("style"));
-	} else {
-		lib_gp_helper.setCSS(gamepad_style);
-	}
+    if(lib_gp_helper.Requests("type"))
+        gamepad_type = (lib_gp_helper.Requests("type"));
+    else
+        gamepad_type = "generic"; // TODO; Remove when finished dev
+        //gamepad_type = lib_gp_helper.getGamepadType(gamepads[gamepad_index].id); // Figure it out if we can
+	if(lib_gp_helper.Requests("deadzone"))
+		gamepad_min_delta = lib_gp_helper.Requests("deadzone");
+	if(lib_gp_helper.Requests("style"))
+		gamepad_style = lib_gp_helper.Requests("style");
+
+    lib_gp_helper.setTypeAndStyle(gamepad_type, gamepad_style);
 }
 
 /**
@@ -118,7 +124,8 @@ function pollGamepads() {
   for (var i = 0; i < gamepads.length; i++) {
     var gp = gamepads[i];
     if(gp) {
-      console.log("Gamepad connected at index " + gp.index + ": " + gp.id + ". It has " + gp.buttons.length + " buttons and " + gp.axes.length + " axes.");
+      //noinspection JSUnresolvedVariable
+        console.log("Gamepad connected at index " + gp.index + ": " + gp.id + ". It has " + gp.buttons.length + " buttons and " + gp.axes.length + " axes.");
       gameLoop();
       clearInterval(interval);
     }
@@ -129,26 +136,27 @@ function pollGamepads() {
 * Update all buttons and axis.
 */
 function gameLoop() {
-	gamepads = lib_gp_helper.getAllGamepads(); // Important to update gamepads first thing every tick
-  if (!gamepads)
-    return;
-  var gp = gamepads[gamepad_index];
-
-  for (var i = 0; i <= gp.buttons.length; i++) {
-		//console.log("pressed button" + i);
-		updateButton(gp.buttons[i], i)
-  }
-  for (var i = 0; i <= gp.axes.length; i++) {
-		//console.log("pressed button" + i);
-		updateAxis(gp.axes[i], i)
-  }
-  var start = rAF(gameLoop);
+    gamepads = lib_gp_helper.getAllGamepads(); // Important to update gamepads first thing every tick
+    if (!gamepads)
+        return;
+    var gp = gamepads[gamepad_index];
+    //noinspection JSDuplicatedDeclaration
+    for (var i = 0; i <= gp.buttons.length; i++) {
+        updateButton(gp.buttons[i], i)
+    }
+    //noinspection JSDuplicatedDeclaration,JSUnresolvedVariable
+    for (var i = 0; i <= gp.axes.length; i++) {
+        //noinspection JSUnresolvedVariable
+        updateAxis(gp.axes[i], i)
+    }
+    rAF(gameLoop);
 }
 
 /**
 * Update a given button on the screen.
 */
 function updateButton(button, id) {
+    // TODO; Update to support analog buttons
 	var value, pressed;
 
 	// Older version of the gamepad API provided buttons as a floating point
@@ -156,7 +164,8 @@ function updateButton(button, id) {
 	// which contain an analog value and a pressed boolean.
 	if (typeof(button) == 'object') {
 		value = button.value;
-		pressed = button.pressed;
+		//noinspection JSUnresolvedVariable
+        pressed = button.pressed;
 	} else {
 		value = button;
 		pressed = button > ANALOGUE_BUTTON_THRESHOLD;
@@ -175,22 +184,31 @@ function updateButton(button, id) {
 }
 
 /**
-* Update a given analogue stick on the screen.
+* Update a given analogue axis on the screen.
 */
 function updateAxis(value, stickId) {
-	if(stickId % 2) {
-		var horizontal = true
-	}
-	
-	var stickEl = document.querySelector('.stick-' + stickId);
-	if (stickEl) {
-		var offsetVal = value * STICK_OFFSET;
-		if (!horizontal) {
-			stickEl.style.marginLeft = offsetVal + 'px';
-		} else {
-			stickEl.style.marginTop = offsetVal + 'px';
-		}
-	}
+    if(!axis_prevVal[stickId])
+            axis_prevVal[stickId] = 0;
+    var dV = axis_prevVal[stickId] + gamepad_min_delta; // Check positive
+    var dnV = axis_prevVal[stickId] - gamepad_min_delta; // Check negative
+
+    if(value > dV || value < dnV) { // If value is greater than minimum
+        axis_prevVal[stickId] = value;
+        // Every even stick is horizontal
+        if (stickId % 2) {
+            var horizontal = true
+        }
+
+        var stickEl = document.querySelector('.stick-' + stickId);
+        if (stickEl) {
+            var offsetVal = value * STICK_OFFSET;
+            if (!horizontal) {
+                stickEl.style.marginLeft = offsetVal + 'px';
+            } else {
+                stickEl.style.marginTop = offsetVal + 'px';
+            }
+        }
+    }
 }
 
 // Program starts here
